snapshots/stoat/tui/stoat__test_harness__snapshot_open_rust_file_highlights.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_file
focused: #1 of 1
mode: normal
size: 40x6
---
[0m[1m[7m[34mf[0m[1m[34mn[0m[97m [0m[33mmain[0m[37m()[0m[97m [0m[37m{[0m
[0m[97m    [0m[1m[34mlet[0m[97m x [0m[96m=[0m[97m [0m[32m"hi"[0m[37m;[0m
[0m[37m}[0m


[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100msample.rs           1:1 [0m
