snapshots/stoat/tui/stoat__test_harness__snapshot_open_unknown_extension_no_highlights.snap
---
source: stoat/src/test_harness.rs
assertion_line: 316
expression: text
---
actions: open_file
focused: #1 of 1
mode: normal
size: 40x6
---
[0m[7m[97mf[0m[97mn main() {}[0m




[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100m/test/sample.txt    1:1 [0m
