snapshots/stoat/tui/stoat__test_harness__snapshot_word_end.snap
---
source: stoat/src/test_harness.rs
assertion_line: 316
expression: text
---
actions: e
focused: #1 of 1
mode: normal
size: 30x5
---
[0m[97m[100mfo[0m[7m[97mo[0m[97m bar baz[0m



[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100m/test/s.txt   [0m
