snapshots/stoat/tui/stoat__test_harness__snapshot_word_forward.snap
---
source: stoat/src/test_harness.rs
assertion_line: 316
expression: text
---
actions: w
focused: #1 of 1
mode: normal
size: 30x5
---
[0m[97m[100mfoo[0m[7m[97m [0m[97mbar baz[0m



[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100m/test/s.txt   [0m
